@@ -8,7 +8,6 @@
 
 package org.elasticsearch.snapshots;
 
-import org.elasticsearch.Version;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.action.admin.cluster.snapshots.restore.RestoreSnapshotRequest;
 import org.elasticsearch.cluster.metadata.DataStream;
@@ -20,6 +19,7 @@ import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.settings.Settings;
 import org.elasticsearch.common.util.Maps;
 import org.elasticsearch.index.Index;
+import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.repositories.RepositoriesService;
 import org.elasticsearch.repositories.Repository;
 import org.elasticsearch.repositories.RepositoryData;
@@ -47,77 +47,112 @@ import static org.mockito.Mockito.when;
 public class RestoreServiceTests extends ESTestCase {
 
     public void testUpdateDataStream() {
+        long now = System.currentTimeMillis();
         String dataStreamName = "data-stream-1";
         String backingIndexName = DataStream.getDefaultBackingIndexName(dataStreamName, 1);
-        List<Index> indices = Collections.singletonList(new Index(backingIndexName, "uuid"));
+        List<Index> indices = List.of(new Index(backingIndexName, randomUUID()));
+        String failureIndexName = DataStream.getDefaultFailureStoreName(dataStreamName, 1, now);
+        List<Index> failureIndices = List.of(new Index(failureIndexName, randomUUID()));
 
-        DataStream dataStream = DataStreamTestHelper.newInstance(dataStreamName, indices);
+        DataStream dataStream = DataStreamTestHelper.newInstance(dataStreamName, indices, failureIndices);
 
         Metadata.Builder metadata = mock(Metadata.Builder.class);
-        IndexMetadata indexMetadata = mock(IndexMetadata.class);
-        when(metadata.get(eq(backingIndexName))).thenReturn(indexMetadata);
-        Index updatedIndex = new Index(backingIndexName, "uuid2");
-        when(indexMetadata.getIndex()).thenReturn(updatedIndex);
+
+        IndexMetadata backingIndexMetadata = mock(IndexMetadata.class);
+        when(metadata.get(eq(backingIndexName))).thenReturn(backingIndexMetadata);
+        Index updatedBackingIndex = new Index(backingIndexName, randomUUID());
+        when(backingIndexMetadata.getIndex()).thenReturn(updatedBackingIndex);
+
+        IndexMetadata failureIndexMetadata = mock(IndexMetadata.class);
+        when(metadata.get(eq(failureIndexName))).thenReturn(failureIndexMetadata);
+        Index updatedFailureIndex = new Index(failureIndexName, randomUUID());
+        when(failureIndexMetadata.getIndex()).thenReturn(updatedFailureIndex);
 
         RestoreSnapshotRequest request = new RestoreSnapshotRequest();
 
         DataStream updateDataStream = RestoreService.updateDataStream(dataStream, metadata, request);
 
         assertEquals(dataStreamName, updateDataStream.getName());
-        assertEquals(Collections.singletonList(updatedIndex), updateDataStream.getIndices());
+        assertEquals(List.of(updatedBackingIndex), updateDataStream.getIndices());
+        assertEquals(List.of(updatedFailureIndex), updateDataStream.getFailureIndices().getIndices());
     }
 
     public void testUpdateDataStreamRename() {
+        long now = System.currentTimeMillis();
         String dataStreamName = "data-stream-1";
         String renamedDataStreamName = "data-stream-2";
         String backingIndexName = DataStream.getDefaultBackingIndexName(dataStreamName, 1);
         String renamedBackingIndexName = DataStream.getDefaultBackingIndexName(renamedDataStreamName, 1);
-        List<Index> indices = Collections.singletonList(new Index(backingIndexName, "uuid"));
+        List<Index> indices = List.of(new Index(backingIndexName, randomUUID()));
 
-        DataStream dataStream = DataStreamTestHelper.newInstance(dataStreamName, indices);
+        String failureIndexName = DataStream.getDefaultFailureStoreName(dataStreamName, 1, now);
+        String renamedFailureIndexName = DataStream.getDefaultFailureStoreName(renamedDataStreamName, 1, now);
+        List<Index> failureIndices = List.of(new Index(failureIndexName, randomUUID()));
+
+        DataStream dataStream = DataStreamTestHelper.newInstance(dataStreamName, indices, failureIndices);
 
         Metadata.Builder metadata = mock(Metadata.Builder.class);
-        IndexMetadata indexMetadata = mock(IndexMetadata.class);
-        when(metadata.get(eq(renamedBackingIndexName))).thenReturn(indexMetadata);
-        Index renamedIndex = new Index(renamedBackingIndexName, "uuid2");
-        when(indexMetadata.getIndex()).thenReturn(renamedIndex);
+
+        IndexMetadata backingIndexMetadata = mock(IndexMetadata.class);
+        when(metadata.get(eq(renamedBackingIndexName))).thenReturn(backingIndexMetadata);
+        Index renamedBackingIndex = new Index(renamedBackingIndexName, randomUUID());
+        when(backingIndexMetadata.getIndex()).thenReturn(renamedBackingIndex);
+
+        IndexMetadata failureIndexMetadata = mock(IndexMetadata.class);
+        when(metadata.get(eq(renamedFailureIndexName))).thenReturn(failureIndexMetadata);
+        Index renamedFailureIndex = new Index(renamedFailureIndexName, randomUUID());
+        when(failureIndexMetadata.getIndex()).thenReturn(renamedFailureIndex);
 
         RestoreSnapshotRequest request = new RestoreSnapshotRequest().renamePattern("data-stream-1").renameReplacement("data-stream-2");
 
         DataStream renamedDataStream = RestoreService.updateDataStream(dataStream, metadata, request);
 
         assertEquals(renamedDataStreamName, renamedDataStream.getName());
-        assertEquals(Collections.singletonList(renamedIndex), renamedDataStream.getIndices());
+        assertEquals(List.of(renamedBackingIndex), renamedDataStream.getIndices());
+        assertEquals(List.of(renamedFailureIndex), renamedDataStream.getFailureIndices().getIndices());
     }
 
     public void testPrefixNotChanged() {
+        long now = System.currentTimeMillis();
         String dataStreamName = "ds-000001";
         String renamedDataStreamName = "ds2-000001";
         String backingIndexName = DataStream.getDefaultBackingIndexName(dataStreamName, 1);
         String renamedBackingIndexName = DataStream.getDefaultBackingIndexName(renamedDataStreamName, 1);
-        List<Index> indices = Collections.singletonList(new Index(backingIndexName, "uuid"));
+        List<Index> indices = Collections.singletonList(new Index(backingIndexName, randomUUID()));
 
-        DataStream dataStream = DataStreamTestHelper.newInstance(dataStreamName, indices);
+        String failureIndexName = DataStream.getDefaultFailureStoreName(dataStreamName, 1, now);
+        String renamedFailureIndexName = DataStream.getDefaultFailureStoreName(renamedDataStreamName, 1, now);
+        List<Index> failureIndices = Collections.singletonList(new Index(failureIndexName, randomUUID()));
+
+        DataStream dataStream = DataStreamTestHelper.newInstance(dataStreamName, indices, failureIndices);
 
         Metadata.Builder metadata = mock(Metadata.Builder.class);
+
         IndexMetadata indexMetadata = mock(IndexMetadata.class);
         when(metadata.get(eq(renamedBackingIndexName))).thenReturn(indexMetadata);
-        Index renamedIndex = new Index(renamedBackingIndexName, "uuid2");
+        Index renamedIndex = new Index(renamedBackingIndexName, randomUUID());
         when(indexMetadata.getIndex()).thenReturn(renamedIndex);
+
+        IndexMetadata failureIndexMetadata = mock(IndexMetadata.class);
+        when(metadata.get(eq(renamedFailureIndexName))).thenReturn(failureIndexMetadata);
+        Index renamedFailureIndex = new Index(renamedFailureIndexName, randomUUID());
+        when(failureIndexMetadata.getIndex()).thenReturn(renamedFailureIndex);
 
         RestoreSnapshotRequest request = new RestoreSnapshotRequest().renamePattern("ds-").renameReplacement("ds2-");
 
         DataStream renamedDataStream = RestoreService.updateDataStream(dataStream, metadata, request);
 
         assertEquals(renamedDataStreamName, renamedDataStream.getName());
-        assertEquals(Collections.singletonList(renamedIndex), renamedDataStream.getIndices());
+        assertEquals(List.of(renamedIndex), renamedDataStream.getIndices());
+        assertEquals(List.of(renamedFailureIndex), renamedDataStream.getFailureIndices().getIndices());
 
         request = new RestoreSnapshotRequest().renamePattern("ds-000001").renameReplacement("ds2-000001");
 
         renamedDataStream = RestoreService.updateDataStream(dataStream, metadata, request);
 
         assertEquals(renamedDataStreamName, renamedDataStream.getName());
-        assertEquals(Collections.singletonList(renamedIndex), renamedDataStream.getIndices());
+        assertEquals(List.of(renamedIndex), renamedDataStream.getIndices());
+        assertEquals(List.of(renamedFailureIndex), renamedDataStream.getFailureIndices().getIndices());
     }
 
     public void testRefreshRepositoryUuidsDoesNothingIfDisabled() {
@@ -147,7 +182,7 @@ public class RestoreServiceTests extends ESTestCase {
                     when(freshBlobStoreRepo.getMetadata()).thenReturn(
                         new RepositoryMetadata(repositoryName, randomAlphaOfLength(3), Settings.EMPTY).withUuid(UUIDs.randomBase64UUID())
                     );
-                    doThrow(new AssertionError("repo UUID already known")).when(freshBlobStoreRepo).getRepositoryData(any());
+                    doThrow(new AssertionError("repo UUID already known")).when(freshBlobStoreRepo).getRepositoryData(any(), any());
                 }
                 case 3 -> {
                     final Repository staleBlobStoreRepo = mock(BlobStoreRepository.class);
@@ -158,16 +193,14 @@ public class RestoreServiceTests extends ESTestCase {
                     );
                     doAnswer(invocationOnMock -> {
                         assertTrue(pendingRefreshes.remove(repositoryName));
-                        @SuppressWarnings("unchecked")
-                        ActionListener<RepositoryData> repositoryDataListener = (ActionListener<RepositoryData>) invocationOnMock
-                            .getArguments()[0];
+                        final ActionListener<RepositoryData> repositoryDataListener = invocationOnMock.getArgument(1);
                         if (randomBoolean()) {
                             repositoryDataListener.onResponse(null);
                         } else {
                             repositoryDataListener.onFailure(new Exception("simulated"));
                         }
                         return null;
-                    }).when(staleBlobStoreRepo).getRepositoryData(any());
+                    }).when(staleBlobStoreRepo).getRepositoryData(any(), any());
                 }
             }
         }
@@ -207,7 +240,7 @@ public class RestoreServiceTests extends ESTestCase {
             List.of(),
             List.of(),
             randomAlphaOfLengthBetween(10, 100),
-            Version.CURRENT,
+            IndexVersion.current(),
             randomNonNegativeLong(),
             randomNonNegativeLong(),
             shards,
